--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,5 +28,6 @@ jobs:
     - run: |
             touch .env
             echo "{{ secrets.prod }}" > .env
+    - name: Install PM2
+      run: npm install -g pm2
     - run: pm2 restart Backend
-  
