--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,7 @@ jobs:
     - run: npm ci
     - run: |
             touch .env
-            echo "{{ secrets.prod }}" > .env
+            echo "${{ secrets.PROD }}" > .env
     - name: Install PM2
       run: npm install -g pm2
     - run: pm2 restart Backend
